...
              BottomNavigationBarItem(
                icon: Icon(currentIndex == 0 ? Icons.dashboard : Icons.dashboard_outlined),
                label: 'Today',
              ),
              BottomNavigationBarItem(
                icon: Icon(currentIndex == 1 ? Icons.restaurant : Icons.restaurant_outlined),
                label: 'Diet',
              ),
              BottomNavigationBarItem(
                icon: Icon(currentIndex == 2 ? Icons.fitness_center : Icons.fitness_center_outlined),
                label: 'Exercise',
              ),
              BottomNavigationBarItem(
...
